--- a/www/index.html
+++ b/www/index.html
@@ -1,132 +1,167 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-        <title>A presentation</title>
+    <title>A presentation</title>
 
-        <link rel="stylesheet" href="./css/reveal.min.css">
-        <link rel="stylesheet" href="./css/theme/default.css" id="theme">
-    </head>
+    <link rel="stylesheet" href="./css/reveal.min.css">
+    <link rel="stylesheet" href="./css/theme/default.css" id="theme">
 
-    <body>
-        <div class="reveal">
-            <div class="slides">
-                <section>
-                    <div id="qr"></div>
-                    <h3>Scan QR code</h3>
-                    <p>(with your phone or tablet)</p>
-                </section>
+    <!-- For syntax highlighting -->
+    <link rel="stylesheet" href="lib/css/zenburn.css">
+  </head>
 
-                <section>
-                    <h1>Connected! :)</h1>
-                </section>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+        <section>
+          <div id="qr"></div>
+          <h3>Scan QR code</h3>
+        </section>
 
-                <section>
-                    <h3>Title of presentation</h3>
-                    <h4>Author</h4>
-                </section>
+        <section>
+          <h1>Connected! :)</h1>
+        </section>
 
-                <section>
-                    <h3>A list of things</h3>
-                    <p>Isn't this list pretty great?</p>
+        <section>
+          <h3>Title of presentation</h3>
+          <h4>Author</h4>
+        </section>
 
-                    <ul>
-                        <li class="fragment fadein">One</li>
-                        <li class="fragment fadein">Two</li>
-                        <li class="fragment fadein">Three</li>
-                        <li class="fragment fadein">Four</li>
-                    </ul>
-                </section>
+        <section>
+          <h3>A list of things</h3>
+          <p>Isn't this list pretty great?</p>
 
-                <section>
-                    <p>How about all of them at once?</p>
-                    <ul>
-                        <li class="fadein">One</li>
-                        <li class="fadein">Two</li>
-                        <li class="fadein">Three</li>
-                        <li class="fadein">Four</li>
-                    </ul>
-                </section>
+          <ul>
+            <li class="fragment fadein">One</li>
+            <li class="fragment fadein">Two</li>
+            <li class="fragment fadein">Three</li>
+            <li class="fragment fadein">Four</li>
+          </ul>
+        </section>
 
-                <section>
-                    <h2>last slide!</h2>
-                </section>
+        <section>
+          <h2>Pretty Code</h2>
+          <pre><code data-trim contenteditable>
+function linkify( selector ) {
+  if( supports3DTransforms ) {
 
-                <section>
-                    <h2>fin</h2>
-                </section>
+    var nodes = document.querySelectorAll( selector );
 
-            </div>
-        </div>
+    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
+      var node = nodes[i];
 
-        <script src="./js/reveal.min.js"></script>
-        <script src="./js/socket.io.min.js"></script>
-        <script src="./js/qrcode.js"></script>
+      if( !node.className ) {
+        node.className += ' roll';
+      }
+    }
+  }
+}
+          </code></pre>
+          <p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
+        </section>
 
-        <script>
-            // generate our random hash
-            var uid = "qazwsxedcrfvtgbyhnujmikolp1234567890".split('').sort(function(){return 0.5-Math.random()}).join('');
+        <section>
+          <p>How about all of them at once?</p>
+          <ul>
+            <li class="fadein">One</li>
+            <li class="fadein">Two</li>
+            <li class="fadein">Three</li>
+            <li class="fadein">Four</li>
+          </ul>
+        </section>
 
-            // we need this to generate the URL
-            var create_qrcode = function(text) {
-                var qr = qrcode(5, 'M');
-                qr.addData(text);
-                qr.make();
+        <section>
+          <h2>last slide!</h2>
+        </section>
 
-                return qr.createImgTag(10);
-            };
+        <section>
+          <h2>fin</h2>
+        </section>
 
-            // make qr code
-            document.getElementById('qr').innerHTML = create_qrcode('http://dev.mindfuzz.net:8008/remote.html#'+uid);
+      </div>
+    </div>
 
-            // connected?
-            var connected = false;
+    <script src="js/reveal.min.js"></script>
+    <script src="js/socket.io.min.js"></script>
+    <script src="js/qrcode.js"></script>
 
-            // create presentation
-            Reveal.initialize({
-                controls: true,
-                keyboard: true,
-                progress: true,
-                history: true,
-                center: true
-            });
+    <script>
 
-            // connect to server
-            var socket = io.connect('http://dev.mindfuzz.net:8008');
+      var remoteServer = "http://securesha.re:8008"
+      // generate our random hash
+      var uid = "qazwsxedcrfvtgbyhnujmikolp1234567890".split('').sort(function(){return 0.5-Math.random()}).join('');
 
-            // identify with server
-            socket.on('identify', function(data) {
-                socket.emit('identity', {
-                    type: 'viewer',
-                    uid: uid
-                });
-            });
+      // we need this to generate the URL
+      var create_qrcode = function(text) {
+        var qr = qrcode(5, 'M');
+        qr.addData(text);
+        qr.make();
 
-            // connected and ready
-            socket.on('ready', function() {
-                if (!connected) {
-                    Reveal.right();
-                    connected = true;
-                }
-            });
+        return qr.createImgTag(10);
+      };
 
-            // lose connection
-            socket.on('disconnected', function() {
-                // lost the remote
-                alert('lost connection.');
-            });
+      // make qr code
+      document.getElementById('qr').innerHTML = create_qrcode(remoteServer + '/remote.html#'+uid);
 
-            // register moves
-            socket.on('right', function() { Reveal.right(); });
-            socket.on('left', function() { Reveal.left(); });
-            socket.on('up', function() { Reveal.up(); });
-            socket.on('down', function() { Reveal.down(); });
-            socket.on('next', function() { Reveal.next(); });
-            socket.on('prev', function() { Reveal.prev(); });
-            socket.on('overview', function() { Reveal.toggleOverview(); });
+      // connected?
+      var connected = false;
+
+      // create presentation
+      Reveal.initialize({
+        controls: true,
+        keyboard: true,
+        progress: true,
+        history: true,
+        center: true,
+        // Optional libraries used to extend on reveal.js
+        dependencies: [
+          { src: 'js/classList.js', condition: function() { return !document.body.classList; } },
+          { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+          { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+          { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+          { src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+          { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+        ]
+      });
+
+      // connect to server
+      var socket = io.connect(remoteServer);
+
+      // identify with server
+      socket.on('identify', function(data) {
+        socket.emit('identity', {
+          type: 'viewer',
+          uid: uid
+        });
+      });
+
+      // connected and ready
+      socket.on('ready', function() {
+        if (!connected) {
+          Reveal.right();
+          connected = true;
+        }
+      });
+
+      // lose connection
+      socket.on('disconnected', function() {
+        // lost the remote
+        alert('lost connection.');
+      });
+
+      // register moves
+      socket.on('right', function() { Reveal.right(); });
+      socket.on('left', function() { Reveal.left(); });
+      socket.on('up', function() { Reveal.up(); });
+      socket.on('down', function() { Reveal.down(); });
+      socket.on('next', function() { Reveal.next(); });
+      socket.on('prev', function() { Reveal.prev(); });
+      socket.on('zoom', function() { zoom.to(document.querySelector(".present .zoomable")); });
+      socket.on('overview', function() { Reveal.toggleOverview(); });
 
 
-        </script>
-    </body>
+    </script>
+  </body>
 </html>
