--- a/www/index.html
+++ b/www/index.html
@@ -5,11 +5,11 @@
 
     <title>A presentation</title>
 
-    <link rel="stylesheet" href="./css/reveal.min.css">
-    <link rel="stylesheet" href="./css/theme/default.css" id="theme">
+    <link rel="stylesheet" href="css/reveal.min.css">
+    <link rel="stylesheet" href="css/theme/night.css" id="theme">
 
     <!-- For syntax highlighting -->
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="css/zenburn.css">
   </head>
 
   <body>
@@ -43,7 +43,7 @@
 
         <section>
           <h2>Pretty Code</h2>
-          <pre><code data-trim contenteditable>
+          <pre><code data-trim contenteditable class="zoomable">
 function linkify( selector ) {
   if( supports3DTransforms ) {
 
@@ -83,6 +83,7 @@ function linkify( selector ) {
       </div>
     </div>
 
+    <script src="js/head.min.js"></script>
     <script src="js/reveal.min.js"></script>
     <script src="js/socket.io.min.js"></script>
     <script src="js/qrcode.js"></script>
@@ -158,7 +159,7 @@ function linkify( selector ) {
       socket.on('down', function() { Reveal.down(); });
       socket.on('next', function() { Reveal.next(); });
       socket.on('prev', function() { Reveal.prev(); });
-      socket.on('zoom', function() { zoom.to(document.querySelector(".present .zoomable")); });
+      socket.on('zoom', function() { zoom.to({element: document.querySelector(".present .zoomable")}); });
       socket.on('overview', function() { Reveal.toggleOverview(); });
 
 
