Shrink code block parents to fit code

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="css/theme/night.css" id="theme">
     <style>
       .reveal pre {
-        width: 95%;
+        max-width: 95%;
+        display: table;
+        width: auto;
+      }
+      .reveal pre code {
+        display: inline-block;
       }
     </style>
 
