--- a/www/index.html
+++ b/www/index.html
@@ -13,9 +13,6 @@
         display: table;
         width: auto;
       }
-      .reveal pre code {
-        display: inline-block;
-      }
     </style>
 
     <!-- For syntax highlighting -->
@@ -30,8 +27,9 @@
           <h3>Scan QR code</h3>
         </section>
 
-        <section>
-          <h1>Connected! :)</h1>
+        <section class="socketConnection">
+          <h2>Connected to external mobile device.</h2>
+          <img src="img/jackie.jpg" style="opacity: 0" />
         </section>
 
         <section data-markdown="slides.md" data-separator="^---" data-vertical="^-vert-"></section>
