--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,9 @@
         display: table;
         width: auto;
       }
+      .reveal pre code{
+        max-height: 600px;
+      }
     </style>
 
     <!-- For syntax highlighting -->
